--- a/css/task4/task4.html
+++ b/css/task4/task4.html
@@ -18,7 +18,7 @@
          </select></center>
     </div>
     <div class="left">
-        <center><img src="../../images/profile-icon-9.png" alt="profile">
+        <center><img src="../../images/profile1.jpg" alt="profile">
             <h2>John Doe</h2>
             <h4>Full stack developer<br>
             Bay area,San Fransisco,CA</h4>
